refactor: ajustes nos testes e limpeza do repositório
- Correção de bugs e compatibilidade dos testes com Java 17
- Melhoria na cobertura do JaCoCo para a classe CategoriaService
- Implementação e blindagem do arquivo .gitignore